--- a/ZAD1/app/src/main/res/navigation/nav_graph.xml
+++ b/ZAD1/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/HomeFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.bmicalculator.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/HomeFragment"
+        android:name="com.example.bmicalculator.HomeFragment"
+        android:label="@string/nav_home"
+        tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_HomeFragment_to_BmiFragment"
+            app:destination="@id/BmiFragment" />
     </fragment>
+
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.bmicalculator.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/BmiFragment"
+        android:name="com.example.bmicalculator.BmiFragment"
+        android:label="@string/nav_bmi"
+        tools:layout="@layout/fragment_bmi" />
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+    <fragment
+        android:id="@+id/CaloriesFragment"
+        android:name="com.example.bmicalculator.CaloriesFragment"
+        android:label="@string/nav_calories"
+        tools:layout="@layout/fragment_calories" />
+
+    <fragment
+        android:id="@+id/RecipesFragment"
+        android:name="com.example.bmicalculator.RecipesFragment"
+        android:label="@string/nav_recipes"
+        tools:layout="@layout/fragment_recipes" />
+
+    <fragment
+        android:id="@+id/RecipeDetailsFragment"
+        android:name="com.example.bmicalculator.RecipeDetailsFragment"
+        android:label="Szczegóły przepisu"
+        tools:layout="@layout/fragment_recipe_details" />
+
 </navigation>
