--- a/ZAD1/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/ZAD1/app/src/main/res/layout/fragment_recipe_details.xml
@@ -78,6 +78,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingredientsTitle" />
 
+        <Button
+            android:id="@+id/buttonAddToShoppingList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/add_to_shopping_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ingredientsList" />
+
         <TextView
             android:id="@+id/stepsTitle"
             android:layout_width="0dp"
@@ -89,7 +98,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ingredientsList" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonAddToShoppingList" />
 
         <TextView
             android:id="@+id/stepsList"
