--- a/ZAD1/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/ZAD1/app/src/main/res/menu/bottom_nav_menu.xml
@@ -19,4 +19,9 @@
         android:id="@+id/navigation_recipes"
         android:icon="@android:drawable/ic_menu_slideshow"
         android:title="@string/nav_recipes" />
+
+    <item
+        android:id="@+id/navigation_shopping"
+        android:icon="@android:drawable/ic_menu_agenda"
+        android:title="@string/nav_shopping" />
 </menu> 
